parallax z-index fixed

--- a/src/components/Parallax/parallax.scss
+++ b/src/components/Parallax/parallax.scss
@@ -18,7 +18,7 @@
         background-position: top center;
         background-attachment: fixed;
         overflow: hidden;
-        z-index: -1;
+        z-index: 0;
     }
     .parallax-backgroundBox3 {
         position: relative;
